--- a/components/papyrus-introduction/PapyrusIntroduction.module.scss
+++ b/components/papyrus-introduction/PapyrusIntroduction.module.scss
@@ -17,7 +17,7 @@
             padding-right: 5rem;
 
             .feature-content {
-                color: #888;
+                color: var(--text-secondary);
 
                 p {
                     line-height: 2.8rem;
