--- a/components/common/Header.module.scss
+++ b/components/common/Header.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   top: 0;
   height: 7rem;
-  background-color: #fff;
+  background-color: var(--bg-primary);
   border-bottom: 1px solid #eee;
   opacity: 0;
   z-index: 100000000;
@@ -28,11 +28,11 @@
         li {
           a {
             padding: 0.8rem 1.6rem;
-            color: #777;
+            color: var(--tab-text);
 
             &:hover,
             &.active {
-              background-color: #eee;
+              background-color: var(--tab-hover);
             }
           }
         }
@@ -207,11 +207,6 @@
             &:hover {
               opacity: 0.7;
             }
-
-            // &:hover,
-            // &.active {
-            //   background-color: #eee;
-            // }
           }
         }
       }
