--- a/components/cover/Cover.module.scss
+++ b/components/cover/Cover.module.scss
@@ -8,15 +8,24 @@
     overflow: hidden;
     z-index: 20;
 
-    .carousel {
+    :global(.slider-container) {
         position: relative;
         width: 100%;
         height: 100vh;
+
+        :global(.slide) {
+            pointer-events: none;
+        }
 
         .slide {
             position: relative;
             height: 100vh;
         }
+    }
+
+    :global(.slider-control-topcenter) {
+        top: calc(50% - 10rem) !important;
+        z-index: 2;
     }
 
     .cover-content {
@@ -30,37 +39,6 @@
         margin-bottom: 4rem;
         z-index: 1;
 
-        .dots {
-            position: absolute;
-            display: flex;
-            top: -1.2rem;
-            margin-bottom: 1.2rem;
-
-            .dot {
-                display: inline-flex;
-                margin: 0 0.4rem;
-
-                button {
-                    width: 1rem;
-                    height: 1rem;
-                    border-radius: 50%;
-                    font-size: 0;
-                    cursor: pointer;
-                    transition: 0.25s;
-
-                    &:hover {
-                        background-color: #1ea3d5;
-                    }
-                }
-
-                &.active {
-                    button {
-                        background-color: #1ea3d5;
-                    }
-                }
-            }
-        }
-
         h2 {
             width: 100%;
             font-size: 0;
@@ -69,6 +47,35 @@
         @media screen and (max-width: 767px) {
             width: 32rem;
             margin-bottom: 3rem;
+        }
+    }
+}
+
+.dots {
+    display: flex;
+    margin-bottom: 1.2rem;
+
+    .dot {
+        display: inline-flex;
+        margin: 0 0.4rem;
+
+        button {
+            width: 1rem;
+            height: 1rem;
+            border-radius: 50%;
+            font-size: 0;
+            cursor: pointer;
+            transition: 0.25s;
+
+            &:hover {
+                background-color: #1ea3d5;
+            }
+        }
+
+        &.active {
+            button {
+                background-color: #1ea3d5;
+            }
         }
     }
 }
