--- a/components/introduction/Introduction.module.scss
+++ b/components/introduction/Introduction.module.scss
@@ -1,6 +1,6 @@
 .introduction {
     padding: 20rem 0;
-    background-color: #f4f4f4;
+    background-color: var(--bg-secondary);
 
     p {
         color: var(--text-primary);
