--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,21 +4,17 @@
 @import url(https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap);
 
 :root {
-  --bg-primary: #d3f1fa;
-  --bg-secondary: #fff;
-  --primary: #00a5b5;
-  --secondary: #f6905d;
+  --bg-primary: #fff;
+  --bg-secondary: #efefef;
   --text-primary: #000;
-  --text-secondary: #676b73;
-  --red: #f2545b;
-  --input-background: #f5f8fa;
-  --footer: #f7f7f7;
+  --text-secondary: #888;
+  --red: #da6161;
+  --footer: #1d1d1f;
   --nav-dropdown: #0a0a0a;
+  --tab-text: #777;
+  --tab-hover: #eee;
+  --footer-text: #c5c5c5;
 }
-
-// html {
-//   scroll-behavior: smooth;
-// }
 
 html,
 body {
@@ -27,6 +23,7 @@ body {
   font-family: Noto Sans KR, sans-serif;
   font-size: 62.5%;
   color: var(--text-primary);
+  background-color: var(--bg-primary);
 }
 
 @media screen and (max-width: 767px) {
@@ -35,6 +32,10 @@ body {
     font-size: 55.55%;
   }
 }
+
+// .modal-open {
+//   overflow: hidden;
+// }
 
 #__next {
   font-size: 1.6rem;
