--- a/components/papyrus-introduction/PapyrusIntroduction.module.scss
+++ b/components/papyrus-introduction/PapyrusIntroduction.module.scss
@@ -54,6 +54,10 @@
                 box-shadow: 0px 0px 8px 3px #ccc;
                 border-radius: 0.4rem;
             }
+
+            video::-webkit-media-controls-overlay-play-button {
+                display: none;
+            }
         }
     }
     @media screen and (max-width: 991px) {
